Minor spacing fix for filters

--- a/frontend/src/assets/sass/complaint.scss
+++ b/frontend/src/assets/sass/complaint.scss
@@ -41,7 +41,7 @@
   flex-direction: column;
 
   :has(button.comp-filter-btn) {
-    padding-top: 16px;
+    margin-top: 16px;
   }
 }
 
